--- a/style.css
+++ b/style.css
@@ -1,10 +1,15 @@
+:root {
+    --color-bg: rgba(255, 255, 255, 1);
+    --color-bg-object: rgba(221, 241, 248, 0.6);
+}
+
 * {
     margin: 0;
     border: 0;
     padding: 0;
 }
 
-html, body, .container {
+html, body, .container, .sub-container {
     width: 100%;
     height: 100%;
 }
@@ -13,9 +18,15 @@ html, body, .container {
 
 .container, .sub-container,
 .sidebar, .header, .content,
+.search, .user, .greeting,
 .project-section, .announcement-section, .trending-section,
 .projects, .news {
     display: grid;
+}
+
+img {
+    max-width: 1.5rem;
+    max-height: 1.5rem;
 }
 
 /* container */
@@ -24,13 +35,18 @@ html, body, .container {
     grid-template-columns: 1fr 3fr;
 }
 
+.sidebar {
+    grid-row: span 2;
+    grid-template-rows: 1fr 15fr;
+}
+
 .sub-container {
     grid-template-rows: 1fr 4fr;
 }
 
-.sidebar {
-    grid-row: span 2;
-    grid-template-rows: 1fr 15fr;
+.header {
+    grid-template-columns: 2fr 1fr;
+    grid-template-rows: 1fr 1fr;
 }
 
 .content {
@@ -43,6 +59,20 @@ html, body, .container {
 
 .news {
     grid-template-rows: 1fr 1fr;
+}
+
+/* header */
+.search {
+    gap: 4px;
+    grid-template-columns: auto 1fr;
+    padding: 1rem;
+}
+
+input {
+    max-height: 1.5rem;
+    margin-right: 4rem;
+    background-color: var(--color-bg-object);
+    border-radius: 8px;
 }
 
 /* projects */
