--- a/style.css
+++ b/style.css
@@ -41,20 +41,22 @@ img {
     grid-row: span 2;
     grid-template-rows: 1fr 15fr;
     background-color: var(--color-secondary);
+    box-shadow: 0 0 -1px -2px var(--color-secondary);
 }
 
 .sub-container {
     grid-template-rows: auto 4fr;
-    background-color: var(--color-bg-object);
 }
 
 .header {
     grid-template-columns: 2fr 1fr;
     grid-template-rows: 1fr 2fr;
+    box-shadow: 0 0 -1px -2px var(--color-bg);
 }
 
 .content {
     grid-template-columns: 3fr 1fr;
+    background-color: var(--color-bg-object);
 }
 
 .projects {
